--- a/scss/layouts/_lo-pre-loader.scss
+++ b/scss/layouts/_lo-pre-loader.scss
@@ -97,22 +97,22 @@
             border-radius: 15px;
             @include transition;
             &:nth-child(1) {
-              animation: line-fill 0.5s ease-in-out infinite;
+              animation: line-fill 0.5s infinite alternate;
               @include transition;
             }
             &:nth-child(2) {
               width: 70%;
-              animation: line-fill-small 0.5s ease-in-out infinite;
+              animation: line-fill-small 0.5s infinite alternate;
               @include transition;
               transition-delay: 0.5s;
             }
             &:nth-child(3) {
-              animation: line-fill-small 0.5s ease-in-out infinite;
+              animation: line-fill-small 0.5s infinite alternate;
               @include transition;
               transition-delay: 0.8s;
             }
             &:nth-child(4) {
-              animation: line-fill 0.5s ease-in-out infinite;
+              animation: line-fill 0.5s infinite alternate;
               @include transition;
               transition-delay: 1s;
             }
@@ -133,7 +133,7 @@
     @keyframes line-fill {
       from {
         width: 0;
-        opacity: 0.3;
+        opacity: 1;
       }
       to {
         width: 100%;
@@ -144,7 +144,7 @@
     @keyframes line-fill-small {
       from {
         width: 0;
-        opacity: 0.3;
+        opacity: 1;
       }
       to {
         width: 70%;
