--- a/scss/components/_cp-forum-login-form.scss
+++ b/scss/components/_cp-forum-login-form.scss
@@ -19,6 +19,10 @@
                 width: 100%;
                 height: 50px;
                 padding: 0 15px;
+                transition: 0.3s;
+                &:focus {
+                    border: 1px solid black;
+                }
             }
             margin-bottom: 20px;
         }
@@ -80,9 +84,6 @@
                     border: none;
                     border-radius: 1px;
                     background: #D9D9D9;
-                    &:focus {
-                        box-shadow: none;
-                    }
                 }
             }
             .form-check-input:checked {
