--- a/scss/components/_cp-sidebar-nav.scss
+++ b/scss/components/_cp-sidebar-nav.scss
@@ -50,7 +50,7 @@
                     }
 
                     &.active {
-                        color: pink;
+                        // background-color: red;
                     }
                 }
                 .dropdown_nav {
@@ -102,6 +102,9 @@
                     }
                 }
                 &:nth-child(1) {
+                    &.active {
+                        background-color: #f3f2ff;
+                    }
                     .nav-link {
                         .icon {
                             background: #6C62CA;
@@ -109,6 +112,9 @@
                     }
                 }
                 &:nth-child(2) {
+                    &.active {
+                        background-color: #fdf5f0;
+                    }
                     .nav-link {
                         .icon {
                             background: #FF8631;
@@ -116,6 +122,9 @@
                     }
                 }
                 &:nth-child(3) {
+                    &.active {
+                        background-color: #fae5e5;
+                    }
                     .nav-link {
                         .icon {
                             background: #FD5B5B;
@@ -123,6 +132,9 @@
                     }
                 }
                 &:nth-child(4) {
+                    &.active {
+                        background-color: #eff7ff;
+                    }
                     .nav-link {
                         .icon {
                             background: #1D8FFA;
@@ -130,6 +142,9 @@
                     }
                 }
                 &:nth-child(5) {
+                    &.active {
+                        background-color: #fdefff;
+                    }
                     .nav-link {
                         .icon {
                             background: #E233FE;
@@ -137,6 +152,9 @@
                     }
                 }
                 &:nth-child(6) {
+                    &.active {
+                        background-color: #f4ffef;
+                    }
                     .nav-link {
                         .icon {
                             background: #4AD00A;
@@ -144,6 +162,9 @@
                     }
                 }
                 &.active {
+                    // &:nth-child(1) {
+                        // background-color: #6C62CA;
+                    // }
                     a {
                         @include transition;
                         .icon {
