--- a/scss/layouts/_lo-best-online-doc.scss
+++ b/scss/layouts/_lo-best-online-doc.scss
@@ -206,8 +206,12 @@
                             line-height: 18px;
                             color: #9B9B9B;
                             padding: 20px;
+                            transition: 0.3s;
                             &::placeholder {
                                 color: #9B9B9B;
+                            }
+                            &:focus {
+                                border: 1px solid black;
                             }
                         }
                     }
